alternating row colors for HexWidget

--- a/src/hex/forms/settingsdialog.ui
+++ b/src/hex/forms/settingsdialog.ui
@@ -29,7 +29,7 @@
      <item>
       <widget class="QStackedWidget" name="pagesStack">
        <property name="currentIndex">
-        <number>1</number>
+        <number>3</number>
        </property>
        <widget class="QWidget" name="pageMisc">
         <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -126,6 +126,30 @@
             </widget>
            </item>
           </layout>
+         </item>
+        </layout>
+       </widget>
+       <widget class="QWidget" name="pageHex">
+        <layout class="QVBoxLayout" name="verticalLayout_5">
+         <item>
+          <widget class="QCheckBox" name="chkAlternatingRows">
+           <property name="text">
+            <string>Alternating row colors</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="verticalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
          </item>
         </layout>
        </widget>
