draft version of search functionality; only search for binary values is implemented.

--- a/src/hex/resources/main.qrc
+++ b/src/hex/resources/main.qrc
@@ -41,5 +41,7 @@
         <file>images/zoom-out32.png</file>
         <file>images/bookmark-new16.png</file>
         <file>images/bookmark-new32.png</file>
+        <file>images/edit-find16.png</file>
+        <file>images/edit-find32.png</file>
     </qresource>
 </RCC>
