--- a/src/hex/forms/addbookmarkdialog.ui
+++ b/src/hex/forms/addbookmarkdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>228</height>
+    <width>324</width>
+    <height>203</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -75,11 +75,11 @@
    <item row="5" column="0">
     <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>Bind to:</string>
+      <string>Dynamic:</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="0" colspan="2">
+   <item row="7" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
@@ -87,28 +87,31 @@
     </widget>
    </item>
    <item row="5" column="1">
-    <layout class="QVBoxLayout" name="verticalLayout2">
-     <item>
-      <widget class="QRadioButton" name="btnBoundToData">
-       <property name="text">
-        <string>Data</string>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QRadioButton" name="btnBoundToPosition">
-       <property name="text">
-        <string>Absolute editor positions</string>
-       </property>
-       <property name="checked">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <widget class="QCheckBox" name="chkDynamic">
+     <property name="toolTip">
+      <string>If bookmark is dynamic, it will be moved when data removed or inserted into document to always contain marked data.</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0">
+    <widget class="QLabel" name="label_5">
+     <property name="text">
+      <string>Resizeable:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="1">
+    <widget class="QCheckBox" name="chkAllowResize">
+     <property name="toolTip">
+      <string>If bookmark is resizeable, it will be resized when data inserted to or removed from bookmarked range.</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -117,8 +120,6 @@
   <tabstop>btnMarkSelection</tabstop>
   <tabstop>btnMarkCaret</tabstop>
   <tabstop>btnSelectColor</tabstop>
-  <tabstop>btnBoundToData</tabstop>
-  <tabstop>btnBoundToPosition</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
