some improvements and refactoring

--- a/src/hex/resources/main.qrc
+++ b/src/hex/resources/main.qrc
@@ -3,6 +3,7 @@
         <file>images/hex.png</file>
         <file>data/COPYING.html</file>
         <file>data/CREDITS.html</file>
+        <file>data/DONATE.html</file>
         <file>images/application-exit16.png</file>
         <file>images/application-exit32.png</file>
         <file>images/configure16.png</file>
