--- a/src/hex/resources/main.qrc
+++ b/src/hex/resources/main.qrc
@@ -4,6 +4,8 @@
         <file>data/COPYING.html</file>
         <file>data/CREDITS.html</file>
         <file>data/DONATE.html</file>
+        <file>images/expand-all16.png</file>
+        <file>images/collapse-all16.png</file>
         <file>images/application-exit16.png</file>
         <file>images/application-exit32.png</file>
         <file>images/configure16.png</file>
